--- a/griya-mdp/src/app/lokasi-perumahan/lokasi-perumahan.html
+++ b/griya-mdp/src/app/lokasi-perumahan/lokasi-perumahan.html
@@ -1,8 +1,9 @@
-<div class="card" style="width: 18rem;">
-  <img src="https://placehold.co/600x400" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
+<h5 class="card-title">{{ housing.name }}</h5>
+<h4 class="text-primary fw-bold mb-0">{{ formatPrice(housing.price) }}</h4>
+<span class="badge" [ngClass]="{'bg-success': housing.status === 'Available'}">
+  {{ housing.status }}
+</span>
+
+<!-- Dynamic star rating -->
+<i class="bi bi-star-fill" *ngFor="let star of getStars()"></i>
+<i class="bi bi-star-half" *ngIf="hasHalfStar()"></i>
