--- a/griya-mdp/src/app/lokasi-perumahan/lokasi-perumahan.html
+++ b/griya-mdp/src/app/lokasi-perumahan/lokasi-perumahan.html
@@ -53,10 +53,9 @@
     </p>
 
     <!-- Action Buttons -->
- <div class="mt-auto">
-  <a [routerLink]="['/property', housing.id]" 
-     class="btn btn-primary w-100">
-      <i class="bi bi-eye me-2"></i>Lihat Detail
+    <div class="d-grid gap-2">
+      <a [routerLink]="['/property', housing.id]" class="btn btn-primary">
+        <i class="bi bi-eye me-2"></i>Lihat Detail
       </a>
       <a href="#" class="btn btn-outline-primary">
         <i class="bi bi-telephone me-2"></i>Hubungi Sales
